--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "numpy>=2.2.6",
     "pygame>=2.6.1",
     "python-dotenv>=1.2.1",
+    "pywin32>=311",
     "rich>=14.2.0",
     "sb3-contrib>=2.7.0",
     "stable-baselines3>=2.7.0",
