--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "ipython>=9.6.0",
     "matplotlib>=3.10.7",
     "numpy>=2.2.6",
+    "optuna>=4.6.0",
     "pygame>=2.6.1",
     "python-dotenv>=1.2.1",
     "pywin32>=311",
